--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "vercel-build": "npm install && npm run build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
